Added Navigation for Login, Register components

--- a/vfc2/angular-src/src/app/components/customer/cu-vendor-list/cu-vendor-list.component.html
+++ b/vfc2/angular-src/src/app/components/customer/cu-vendor-list/cu-vendor-list.component.html
@@ -1,7 +1,7 @@
 <div>
   <section class="section pb-3">
-    <h1 class="section-heading h1 pt-4">Vendor Details</h1>
-
+    <h1 class="section-heading h1 pt-4">Available Vendors</h1>
+    <flash-messages></flash-messages>
     <!-- <a href="/AddVendor">
       <button type="button" class="btn btn-default waves-light" mdbRippleRadius>Add Vendor</button>
     </a> -->
@@ -9,7 +9,7 @@
       <div class="col-lg-3 col-md-6 mb-r" *ngFor='let vendor of Vendors'>
         <div class="card card-cascade narrower">
           <div class="view overlay hm-white-slight">
-            <img src="" class="img-fluid" alt="">
+            <img src="https://mdbootstrap.com/img/Others/documentation/img%20(42)-mini.jpg" class="img-fluid" alt="">
             <a>
               <div class="mask waves-effect waves-light" mdbRippleRadius></div>
             </a>
