View single Vendor is working

--- a/vfc2/angular-src/src/app/components/admin/view-vendor/view-vendor.component.html
+++ b/vfc2/angular-src/src/app/components/admin/view-vendor/view-vendor.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1> Add Vendor </h1>
+    <h1> {{Vendor.VendorName}} </h1>
     <table style="margin-left:15px">
         <tr>
             <td>
@@ -42,14 +42,7 @@
                 {{Vendor.VendorEmail}}
             </td>
         </tr>
-        <tr>
-            <td>
-                <label for="VendorPassword">Password</label>
-            </td>
-            <td>
-                {{Vendor.VendorPassword}}
-            </td>
-        </tr>
+       
     </table>
 
     <div>
