view,Update,Add done for vendor, customer

--- a/vfc2/angular-src/src/app/components/customer/cu-vendor-list/cu-vendor-list.component.html
+++ b/vfc2/angular-src/src/app/components/customer/cu-vendor-list/cu-vendor-list.component.html
@@ -16,7 +16,7 @@
           </div>
 
           <div class="card-body text-center">
-            <h4 class="card-title" [routerLink]="['/cumenu',vendor.ID]">
+            <h4 class="card-title" [routerLink]="['/cumenu',vendor.VendorEmail]">
               <strong>
                 {{ vendor.VendorName }}
               </strong>
