--- a/vfc2/angular-src/src/app/components/customer/customer-menu/customer-menu.component.html
+++ b/vfc2/angular-src/src/app/components/customer/customer-menu/customer-menu.component.html
@@ -1,50 +1,50 @@
 <div>
-  <h1 class="section-heading h1 pt-4">{{Vendor.VendorName}}</h1>
-  <section class="section pb-3" *ngFor='let menu of Menus'>
-      <h2 class="section-heading h2 pt-4">{{menu.name}}</h2>
-      <div class="row">
-          <div class="col-lg-4 col-md-12 mb-r" *ngFor='let items of menu.items'>
-              <div class="card card-cascade wider">
-                  <div class="view overlay hm-white-slight">
-                      <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/img (55).jpg" class="img-fluid" alt="">
-                      <a>
-                          <div class="mask waves-effect waves-light" mdbRippleRadius></div>
-                      </a>
-                  </div>
-                  <div class="card-body text-center no-padding">
-                      <!--Category & Title-->
-                      <h4 class="card-title">
-                          <strong>
-                              <a>{{items.name}}</a>
-                          </strong>
-                      </h4>
-
-                      <!--Description-->
-                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing minima veniam elit. Nam incidunt eius est voluptatibus.
-                      </p>
-
-                      <!--Card footer-->
-                      <div class="card-footer">
-                          <span class="left">{{items.price}}/-rs</span>
-                          <a>
-                              
-                          </a>
-                          <span class="right">
-                              <a placement="top" mdbTooltip="Add to Cart">
-                                  <i class="fa fa-shopping-cart"></i>
-                              </a>
-                              <a placement="top" mdbTooltip="Share">
-                                  <i class="fa fa-share-alt"></i>
-                              </a>
-                              <a placement="top" mdbTooltip="Add to Wishlist" container="body">
-                                  <i class="fa fa-heart"></i>
-                              </a>
-                          </span>
-                      </div>
-
-                  </div>
-              </div>
-          </div>
+        <h1 class="section-heading h1 pt-4">{{Vendor.VendorName}}</h1>
+        <section class="section pb-3" *ngFor='let menu of Vendor.categories'>
+            <h2 class="section-heading h2 pt-4">{{menu.name}}</h2>
+            <div class="row">
+                <div class="col-lg-4 col-md-12 mb-r" *ngFor='let items of menu.items'>
+                    <div class="card card-cascade wider">
+                        <div class="view overlay hm-white-slight">
+                            <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/img (55).jpg" class="img-fluid" alt="">
+                            <a>
+                                <div class="mask waves-effect waves-light" mdbRippleRadius></div>
+                            </a>
+                        </div>
+                        <div class="card-body text-center no-padding">
+                            <!--Category & Title-->
+                            <h4 class="card-title">
+                                <strong>
+                                    <a>{{items.name}}</a>
+                                </strong>
+                            </h4>
+      
+                            <!--Description-->
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing minima veniam elit. Nam incidunt eius est voluptatibus.
+                            </p>
+      
+                            <!--Card footer-->
+                            <div class="card-footer">
+                                <span class="left">{{items.price}}/-rs</span>
+                                <a>
+                                    
+                                </a>
+                                <span class="right">
+                                    <a placement="top" mdbTooltip="Add to Cart">
+                                        <i class="fa fa-shopping-cart"></i>
+                                    </a>
+                                    <a placement="top" mdbTooltip="Share">
+                                        <i class="fa fa-share-alt"></i>
+                                    </a>
+                                    <a placement="top" mdbTooltip="Add to Wishlist" container="body">
+                                        <i class="fa fa-heart"></i>
+                                    </a>
+                                </span>
+                            </div>
+      
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
       </div>
-  </section>
-</div>
