--- a/vfc2/angular-src/src/app/components/navbar/navbar.component.html
+++ b/vfc2/angular-src/src/app/components/navbar/navbar.component.html
@@ -3,20 +3,22 @@
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark teal" [containerInside]="true">
            
   <!-- Navbar brand -->
-  <logo><a class="navbar-brand" href="#">{{ title }}</a></logo>
+  <logo><a class="navbar-brand" href="#">Virtual Food Court</a></logo>
 
   <!-- Collapsible content -->
   <links>
 
       <!-- Links -->
       <ul class="navbar-nav mr-auto">
-          <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-              <a class="nav-link waves-light" mdbRippleRadius routerLink="">About<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item" routerLinkActive="active">
+        <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+            <a class="nav-link waves-light" mdbRippleRadius routerLink="About">About<span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+          <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
               <a class="nav-link waves-light" mdbRippleRadius routerLink="Login">Login</a>
           </li>
-          <li class="nav-item" routerLinkActive="active">
+          <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link waves-light" mdbRippleRadius routerLink="Register">Register</a>
         </li>
 
@@ -36,10 +38,10 @@
       </ul>
       <!-- Links -->
 
-      <!-- Search form -->
+      <!-- Search form 
       <form class="form-inline  waves-light" mdbRippleRadius>
           <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      </form>
+      </form> -->
   </links>
   <!-- Collapsible content -->
 
