Standardized buttons. Fixed page titles. Menu items appear in row

--- a/vfc2/angular-src/src/app/components/about/about.component.html
+++ b/vfc2/angular-src/src/app/components/about/about.component.html
@@ -4,10 +4,10 @@
   <hr class="my-2">
   <div>
     <a [routerLink]="['/Register']">
-      <button type="button" class="btn btn-default waves-light" mdbRippleRadius>Register</button>
+      <button type="button" class="btn btn-primary waves-light" mdbRippleRadius>Register</button>
     </a>
     <a [routerLink]="['/Login']">
-      <button type="button" class="btn btn-default waves-light" mdbRippleRadius>Login</button>
+      <button type="button" class="btn btn-secondary waves-light" mdbRippleRadius>Login</button>
     </a>
   </div>
 </div>
@@ -15,7 +15,7 @@
   <div class="col-sm-4">
     <!--Panel-->
     <div class="card">
-        <div class="card-header teal lighten-1 white-text">
+        <div class="card-header default-color-dark lighten-1 white-text">
             Administrator
         </div>
         <div class="card-body">
@@ -27,7 +27,7 @@
   <div class="col-sm-4">
     <!--Panel-->
     <div class="card">
-        <div class="card-header teal lighten-1 white-text">
+        <div class="card-header default-color-dark lighten-1 white-text">
             Vendors
         </div>
         <div class="card-body">
@@ -39,7 +39,7 @@
   <div class="col-sm-4">
     <!--Panel-->
     <div class="card">
-        <div class="card-header teal lighten-1 white-text">
+        <div class="card-header default-color-dark lighten-1 white-text">
             Customers
         </div>
         <div class="card-body">
