--- a/vfc2/angular-src/src/app/components/login/login.component.html
+++ b/vfc2/angular-src/src/app/components/login/login.component.html
@@ -20,7 +20,7 @@
         </tr>
         <tr>                            
           <td>
-              <button type="submit" class="button">Submit</button>
+              <button type="submit" class="btn btn-primary">Login</button>
           </td>
         </tr>
       </table>
