--- a/vfc2/angular-src/src/app/components/register/register.component.html
+++ b/vfc2/angular-src/src/app/components/register/register.component.html
@@ -28,7 +28,7 @@
       </tr>
       <tr>                            
         <td>
-            <button type="submit" class="button">Submit</button>
+            <button type="submit" class="btn btn-primary">Register</button>
         </td>
       </tr>
     </table>
