social login working

--- a/vfc2/angular-src/src/app/components/login/login.component.html
+++ b/vfc2/angular-src/src/app/components/login/login.component.html
@@ -22,7 +22,17 @@
           <td>
               <button type="submit" class="btn btn-primary">Login</button>
           </td>
+
+          <td>
+           
+          </td>
+
         </tr>
       </table>
+      <a [routerLink]="['/SLogin']">
+        <button type="button" class="btn btn-secondary waves-light" mdbRippleRadius>Other Login</button>
+      </a>
     </form>
   </div>
+
+  
