--- a/vfc2/angular-src/src/app/components/customer/customer-menu/customer-menu.component.html
+++ b/vfc2/angular-src/src/app/components/customer/customer-menu/customer-menu.component.html
@@ -18,19 +18,19 @@
                                     <a>{{items.name}}</a>
                                 </strong>
                             </h4>
+
+                            <h5 class="card-title">
+                               
+                                    <a>{{items.price}}/{{items.currency}}</a>
+                            </h5>
       
                             <!--Description-->
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing minima veniam elit. Nam incidunt eius est voluptatibus.
-                            </p>
+                            
       
                             <!--Card footer-->
                             <div class="card-footer">
-                                <span class="left">{{items.price}}/-rs</span>
-                                <a>
-                                    
-                                </a>
-                                <span class="right">
-                                    <a placement="top" mdbTooltip="Add to Cart">
+                                <!-- <span>
+                                    <a placement="left" mdbTooltip="Add to Cart" (click)="AddtoCart(menu.name,items.name,items.price, items.currency, items.preparation_time)">
                                         <i class="fa fa-shopping-cart"></i>
                                     </a>
                                     <a placement="top" mdbTooltip="Share">
@@ -39,7 +39,23 @@
                                     <a placement="top" mdbTooltip="Add to Wishlist" container="body">
                                         <i class="fa fa-heart"></i>
                                     </a>
-                                </span>
+                                </span> -->
+
+                                <span class="float-left font-weight-bold">
+                                    <label>Quantity:</label><input type="number" #productQty name="productQty" value="1" min="1" max="10" [(ngModel)]="Quantity">
+                                  </span>
+
+                                <span class="float-right">
+                                    <a data-toggle="tooltip" data-placement="top" title="Add to Cart" (click)="AddtoCart(menu.name,items.name,items.price, items.currency, items.preparation_time, productQty.value)">
+                                      <i class="fa fa-shopping-cart grey-text ml-3"></i>
+                                    </a>
+                                    <a data-toggle="tooltip" data-placement="top" title="Share">
+                                      <i class="fa fa-share-alt grey-text ml-3"></i>
+                                    </a>
+                                    <a class="active" data-toggle="tooltip" data-placement="top" title="Added to Wishlist">
+                                      <i class="fa fa-heart ml-3"></i>
+                                    </a>
+                                  </span>
                             </div>
       
                         </div>
