Backing up still Payment

--- a/vfc2/angular-src/src/app/components/customer/check-out/check-out.component.html
+++ b/vfc2/angular-src/src/app/components/customer/check-out/check-out.component.html
@@ -39,7 +39,7 @@
     </tbody>
     <!--Table body-->
 </table>
-<button type="button" gradient="aqua" rounded="true" class="waves-light">Pay</button>
+<button type="button" gradient="aqua" rounded="true" class="waves-light" [routerLink]="['/Pay', orders.sku]">Pay</button>
 <!--Table-->
   </div>
 
