--- a/vfc2/angular-src/src/app/components/customer/payment/payment.component.html
+++ b/vfc2/angular-src/src/app/components/customer/payment/payment.component.html
@@ -1,3 +1,6 @@
 <p>
   payment works!
 </p>
+<div>
+  <button type="button" (click)="UpdateStatus()" gradient="aqua" rounded="true" class="waves-light">Payment</button>
+</div>
