--- a/vfc2/angular-src/src/app/components/customer/order-history/order-history.component.html
+++ b/vfc2/angular-src/src/app/components/customer/order-history/order-history.component.html
@@ -1,8 +1,11 @@
-Shopping Cart
+<h1>
+  order-history works!
+</h1>
+  
 
 <div class="container" *ngFor='let orders of Orders'>
 
-  {{orders.vendorEmail}}
+  {{orders.vendorName}}
     <!--Table-->
 <table class="table">
 
@@ -30,13 +33,29 @@ Shopping Cart
     </tbody>
     <!--Table body-->
 </table>
-<span>
-        <a [routerLink]="['Checkout/', orders.sku]">
+
+<div class="container">
+  <div class="row">
+
+    <div class="col">
+      <p *ngIf = "orders.orderStatus == 'Open'">
+          <a [routerLink]="['Checkout/', orders.sku]">
             <button type="button"  gradient="aqua" rounded="true" class="waves-light">GO to Cart</button>
     </a>
-    
-</span>
+      </p>
+      
+    </div>
 
+    <div class="col">
+      Total:
+    </div>
+
+    <div class="col">
+      Status: {{orders.orderStatus}}
+    </div>
+
+  </div>
+</div>
 <!--Table-->
   </div>
 
