Testing Azure devops

--- a/vfc2/angular-src/src/app/components/about/about.component.html
+++ b/vfc2/angular-src/src/app/components/about/about.component.html
@@ -20,6 +20,7 @@
         </div>
         <div class="card-body">
             <p class="card-text">As an adminstrator, you can manage the vendors of the food court</p>
+            <p class="card-text">testing the azure devops</p>
         </div>
     </div>
     <!--/.Panel-->
